--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   dropdown_search: ^4.0.1
   signature: ^5.0.1
-  flutter_touch_spin: ^2.0.0-nullsafety.1
+  flutter_touch_spin: ^2.0.0
   intl: ^0.17.0
   flutter_typeahead: ^4.0.0
   flutter_datetime_picker_bdaya: ^2.0.0
