--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,21 @@ dependencies:
   flutter_form_builder: ^7.3.1
   flutter_colorpicker: ^1.0.3
   dropdown_search: ^5.0.2
-  signature: ^5.0.1
+  signature:
+    git:
+      url: https://github.com/larsziemert/signature/
+      ref: update_image_4
   flutter_touch_spin: ^2.0.0
-  intl: ^0.17.0
-  flutter_typeahead: ^4.0.0
+  intl: ^0.18.0
+  flutter_typeahead: ^4.3.3
   flutter_datetime_picker_bdaya: ^2.0.0
   flutter_rating_bar: ^4.0.1
 
+dependency_overrides:
+  flutter_chips_input:
+    git: https://github.com/danvick/flutter_chips_input/
+    ref: flutter_37
+    
 dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
