chore: change funding

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,1 @@
-# github: [danvick]
-custom: https://www.buymeacoffee.com/danvick
-patreon: danvick
+open_collective: flutter-form-builder-ecosystem
