--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        channel: [stable, beta]
+        channel: [stable]
 
     steps:
       - uses: actions/checkout@v3
