--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     tags:
-      - '*'
+      - "[0-9]+.[0-9]+.[0-9]+*"
 
   pull_request:
     branches: [main]
@@ -14,10 +14,6 @@ on:
 jobs:
   build:
     runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        channel: [stable]
 
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +26,7 @@ jobs:
       - name: Flutter action
         uses: subosito/flutter-action@v2
         with:
-          channel: ${{ matrix.channel }}
+          channel: "stable"
 
       - name: Install dependencies
         run: flutter pub get
@@ -40,6 +36,11 @@ jobs:
         run: flutter analyze
       - name: Run tests
         run: flutter test --coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: coverage/lcov.info
+          name: form_builder_extra_fields
       - name: Check publish warnings
         run: dart pub publish --dry-run
       - name: Build example
@@ -49,42 +50,28 @@ jobs:
           flutter build ios --debug --no-codesign
           flutter build web
 
-      - name: Upload coverage to Codecov
-        if: ${{ matrix.channel == 'stable' }}
-        uses: codecov/codecov-action@v3
-        with:
-          files: coverage/lcov.info
-          flags: unittests
-          name: form_builder_extra_fields
-
   deployment:
     if: ${{ github.ref_type == 'tag' }}
     needs: build
     name: Deploy package
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
-
     steps:
-    - name: Configure enviroment
-      uses: actions/checkout@v3
-    - name: Download flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable'
-    - name: Setup pub credentials
-      shell: bash
-      env:
-        PUB_DEV_PUBLISH_ACCESS_TOKEN: ${{ secrets.PUB_DEV_PUBLISH_ACCESS_TOKEN }}
-        PUB_DEV_PUBLISH_REFRESH_TOKEN: ${{ secrets.PUB_DEV_PUBLISH_REFRESH_TOKEN }}
-      run: |
-        sh ./tool/pub_login.sh
-    - name: Publish package
-      run: dart pub publish -v -f
-    - name: Build changelog
-      id: github_release
-      uses: mikepenz/release-changelog-builder-action@v3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Create release
-      uses: softprops/action-gh-release@v0.1.14
-      with:
-        body: ${{steps.github_release.outputs.changelog}}
+      - uses: actions/checkout@v3
+      - uses: dart-lang/setup-dart@v1
+      - name: Flutter action
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+      - name: Publish package
+        run: dart pub publish -v -f
+      - name: Build changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          body: ${{steps.github_release.outputs.changelog}}
