--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,20 +6,17 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.19.0 <3.0.0"
-  flutter: ">=3.7.0"
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^8.0.0
+  flutter_form_builder: ^9.0.0-dev.2
   flutter_localizations:
     sdk: flutter
   form_builder_extra_fields:
     path: ../
-  form_builder_validators: ^8.5.0
-
-dependency_overrides:
-  intl: 0.17.0
+  form_builder_validators: ^9.0.0-dev.2
 
 dev_dependencies:
   flutter_lints: ^2.0.1
