--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,17 @@ funding:
 
 environment:
   sdk: ">=2.19.0 <3.0.0"
-  flutter: ">=3.7.0"
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^8.0.0
+  flutter_form_builder: ^9.0.0-dev.2
   flutter_colorpicker: ^1.0.3
   dropdown_search: ^5.0.6
   signature: ^5.3.2
-  intl: ^0.17.0
-  flutter_typeahead: ^4.3.7
+  intl: ^0.18.0
+  flutter_typeahead: ^4.3.8
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
