--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       - name: Format code
-        run: flutter format --dry-run --set-exit-if-changed .
+        run: dart format --set-exit-if-changed .
       - name: Analyze static code
         run: flutter analyze
       - name: Run tests
@@ -66,12 +66,3 @@ jobs:
           channel: "stable"
       - name: Publish package
         run: dart pub publish -v -f
-      - name: Build changelog
-        id: github_release
-        uses: mikepenz/release-changelog-builder-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create release
-        uses: softprops/action-gh-release@v1
-        with:
-          body: ${{steps.github_release.outputs.changelog}}
