--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,12 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^9.0.0-dev.3
+  flutter_form_builder: ^9.0.0
   flutter_localizations:
     sdk: flutter
   form_builder_extra_fields:
     path: ../
-  form_builder_validators: ^9.0.0-dev.3
+  form_builder_validators: ^9.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
