--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^9.0.0-dev.2
+  flutter_form_builder: ^9.0.0
   flutter_colorpicker: ^1.0.3
   dropdown_search: ^5.0.6
   signature: ^5.3.2
