ci: update ci setup

--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -17,6 +17,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1 # Use shallow clone for faster checkout
 
       - name: Check broken links
         uses: JustinBeckwith/linkinator-action@v1
@@ -29,10 +31,19 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
 
+      - name: Get Flutter version by FVM
+        uses: kuhnroyal/flutter-fvm-config-action@v2
+        id: fvm-config-action
+        with:
+          path: ".fvmrc"
+
       - name: Flutter action
         uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: ${{ steps.fvm-config-action.outputs.FLUTTER_VERSION }}
+          channel: ${{ steps.fvm-config-action.outputs.FLUTTER_CHANNEL }}
+          architecture: x64
+          cache: true
 
       - name: Install dependencies
         run: flutter pub get
@@ -41,9 +52,11 @@ jobs:
       - name: Analyze static code
         run: flutter analyze
       - name: Run tests
-        run: flutter test --coverage
+        run: flutter test --no-pub --coverage
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           files: coverage/lcov.info
           name: form_builder_extra_fields
@@ -65,10 +78,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1 # Use shallow clone for faster checkout
       - uses: dart-lang/setup-dart@v1
-      - name: Flutter action
+
+      - name: Get Flutter version by FVM
+        uses: kuhnroyal/flutter-fvm-config-action@v2
+        id: fvm-config-action
+        with:
+          path: ".fvmrc"
+
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: ${{ steps.fvm-config-action.outputs.FLUTTER_VERSION }}
+          channel: ${{ steps.fvm-config-action.outputs.FLUTTER_CHANNEL }}
+          architecture: x64
+          cache: true
       - name: Publish package
         run: dart pub publish -v -f
