--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,22 +4,25 @@ version: 10.2.0
 issue_tracker: https://github.com/flutter-form-builder-ecosystem/form_builder_extra_fields/issues
 homepage: https://github.com/flutter-form-builder-ecosystem
 repository: https://github.com/flutter-form-builder-ecosystem/form_builder_extra_fields
+topics: 
+  - form
+  - forms
 funding:
   - https://opencollective.com/flutter-form-builder-ecosystem
 
 environment:
-  sdk: ">=3.4.0 <4.0.0"
-  flutter: ">=3.22.0"
+  sdk: ">=3.5.0 <4.0.0"
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^9.3.0
-  flutter_colorpicker: ^1.0.3
+  flutter_form_builder: ^9.4.0
+  flutter_colorpicker: ^1.1.0
   dropdown_search: ^5.0.6
-  signature: ^5.4.0
+  signature: ^5.5.0
   intl: ^0.19.0
-  flutter_typeahead: ^4.7.0
+  flutter_typeahead: ^5.2.0
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
