build: update flutter_lints version

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   form_builder_validators: ^11.0.0
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ">=5.0.0 <6.0.0"
   flutter_test:
     sdk: flutter
 
