--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^9.6.0
+  flutter_form_builder: ^9.7.0
   flutter_colorpicker: ^1.1.0
   dropdown_search: ^5.0.6
   signature: ^5.5.0
-  intl: ^0.19.0
+  intl: '>=0.19.0 <0.21.0'
+
   flutter_typeahead: ^5.2.0
   flutter_rating_bar: ^4.0.1
 
