--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,12 @@ homepage: https://github.com/flutter-form-builder-ecosystem
 repository: https://github.com/flutter-form-builder-ecosystem/form_builder_extra_fields
 topics:
   - form
-  - forms
 funding:
   - https://opencollective.com/flutter-form-builder-ecosystem
 
 environment:
-  sdk: ">=3.6.0 <4.0.0"
-  flutter: ">=3.27.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0"
 
 dependencies:
   flutter:
@@ -20,7 +19,9 @@ dependencies:
   flutter_form_builder: ^9.6.0
   flutter_colorpicker: ^1.1.0
   dropdown_search: ^6.0.2
-  signature: ">=5.5.0 <7.0.0"
+  signature: ^6.0.0
+  # This version would be max, the same version used on flutter_localizations
+  # https://github.com/flutter/flutter/blob/17025dd88227cd9532c33fa78f5250d548d87e9a/packages/flutter_localizations/pubspec.yaml#L14
   intl: ^0.19.0
   flutter_typeahead: ^5.2.0
   flutter_rating_bar: ^4.0.1
