--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -11,9 +11,17 @@ on:
 
   workflow_dispatch:
 
+# This ensures that previous jobs for the PR are canceled when PR is updated
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        flutter-version: [stable, beta]
 
     steps:
       - uses: actions/checkout@v4
@@ -34,6 +42,7 @@ jobs:
         uses: kuhnroyal/flutter-fvm-config-action/setup@v3
         with:
           path: '.fvmrc'
+          flavor: ${{ matrix.flutter-version }}
       - name: Install dependencies
         run: flutter pub get
       - name: Format code
