--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: form_builder_extra_fields
 description: Additional ready-made form input fields for flutter_form_builder package
 version: 11.1.0
-issue_tracker: https://github.com/flutter-form-builder-ecosystem/form_builder_extra_fields/issues
 homepage: https://github.com/flutter-form-builder-ecosystem
 repository: https://github.com/flutter-form-builder-ecosystem/form_builder_extra_fields
+issue_tracker: https://github.com/flutter-form-builder-ecosystem/form_builder_extra_fields/issues
 topics:
   - form
 funding:
@@ -22,7 +22,7 @@ dependencies:
   signature: ^6.0.0
   # This version would be max, the same version used on flutter_localizations
   # https://github.com/flutter/flutter/blob/17025dd88227cd9532c33fa78f5250d548d87e9a/packages/flutter_localizations/pubspec.yaml#L14
-  intl: ^0.19.0
+  intl: ">=0.19.0 <0.21.0"
   flutter_typeahead: ^5.2.0
   flutter_rating_bar: ^4.0.1
 
