--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,21 +5,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.7.0 <4.0.0"
-  flutter: ">=3.29.0"
+  sdk: ">=3.8.0 <4.0.0"
+  flutter: ">=3.32.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^10.0.0
+  flutter_form_builder: ^10.1.0
   flutter_localizations:
     sdk: flutter
   form_builder_extra_fields:
     path: ../
-  form_builder_validators: ^11.1.2
+  form_builder_validators: ^11.2.0
 
 dev_dependencies:
-  flutter_lints: ">=5.0.0 <6.0.0"
+  flutter_lints: ">=6.0.0"
   flutter_test:
     sdk: flutter
 
