--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,23 +10,23 @@ funding:
   - https://opencollective.com/flutter-form-builder-ecosystem
 
 environment:
-  sdk: ">=3.7.0 <4.0.0"
-  flutter: ">=3.29.0"
+  sdk: ">=3.8.0 <4.0.0"
+  flutter: ">=3.32.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^10.0.0
+  flutter_form_builder: ^10.1.0
   flutter_colorpicker: ^1.1.0
   dropdown_search: ^6.0.2
-  signature: ^6.0.0
+  signature: ^6.3.0
   # This version would be max, the same version used on flutter_localizations
   # https://github.com/flutter/flutter/blob/17025dd88227cd9532c33fa78f5250d548d87e9a/packages/flutter_localizations/pubspec.yaml#L14
-  intl: ">=0.19.0 <0.21.0"
+  intl: ">=0.20.0 <0.21.0"
   flutter_typeahead: ^5.2.0
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
-  flutter_lints: ">=5.0.0 <6.0.0"
+  flutter_lints: ">=6.0.0"
   flutter_test:
     sdk: flutter
