--- a/.github/workflows/base-beta.yaml
+++ b/.github/workflows/base-beta.yaml
@@ -20,12 +20,16 @@ concurrency:
 
 jobs:
   build:
+    permissions:
+      contents: read
     uses: flutter-form-builder-ecosystem/.github/.github/workflows/minimal-quality.yaml@main
     with:
       codecov-name: form_builder_extra_fields
       enable-fix-tests: true
       fvm-flavor: beta
   example:
+    permissions:
+      contents: read
     uses: flutter-form-builder-ecosystem/.github/.github/workflows/build-examples.yaml@main
     with:
       fvm-flavor: beta
