--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^10.2.0
+  flutter_form_builder: ^10.3.0+1
   flutter_localizations:
     sdk: flutter
   form_builder_extra_fields:
