--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_form_builder: ^10.2.0
+  flutter_form_builder: ^10.3.0+1
   flutter_colorpicker: ^1.1.0
   dropdown_search: ^6.0.2
   signature: ^6.3.0
