ci: add write permission for contents in deployment jobs

--- a/.github/workflows/base-beta.yaml
+++ b/.github/workflows/base-beta.yaml
@@ -38,6 +38,7 @@ jobs:
   deployment:
     permissions:
       id-token: write
+      contents: write
     uses: flutter-form-builder-ecosystem/.github/.github/workflows/deployment.yaml@main
     if: ${{ github.ref_type == 'tag' }}
     needs: [build, example]
